test/Tests/Interface/ExtraOutput.golden

test\Tests\Interface\ExtraOutput.hs:56:5: error:
    * Output "out2" of type V 4 Float of Vertex shader named "main",
      does not match any input of Fragment shader named "main".
    * In the expression:
        ShaderPipeline
          $ StructInput @VertexInput @(Triangle List)
              :>-> (vertex, "vertex.spv")
              :>-> (fragment, "fragment.spv")
      In an equation for `shaderPipeline':
          shaderPipeline
            = ShaderPipeline
                $ StructInput @VertexInput @(Triangle List)
                    :>-> (vertex, "vertex.spv")
                    :>-> (fragment, "fragment.spv")
   |
56 |   = ShaderPipeline
   |     ^^^^^^^^^^^^^^^...
